--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-DeaDBeeF player Gnome multimedia keys support plugin
+DeaDBeeF player Gnome multimedia keys plugin
+
+It adds support for Gnome multimedia keys to DeaDBeeF player.
