--- a/README
+++ b/README
@@ -1,3 +1,12 @@
 DeaDBeeF player Gnome multimedia keys plugin
 
 It adds support for Gnome multimedia keys to DeaDBeeF player.
+
+To build:
+
+$ make
+
+To install:
+
+$ make install
+(copies .so file to /usr/lib/deadbeef/)
