Add AUR package link to README

--- a/README
+++ b/README
@@ -21,3 +21,7 @@ $ make clean
 
 Original project:
 see: https://code.google.com/p/deadbeef-gnome-mmkeys/
+
+
+Arch Linux package:
+https://aur.archlinux.org/packages/deadbeef-gnome-mmkeys/
