Update my name.

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ DeaDBeeF player GNOME (via DBus) multimedia keys plugin
 
 Author Ruslan Khusnullin <ruslan.khusnullin@gmail.com>
 Updates by Bartlomiej Bułat <bartek.bulat@gmail.com>
-Updates by Zhang Hai <dreaming.in.code.zh@gmail.com>
+Updates by Hai Zhang <dreaming.in.code.zh@gmail.com>
 
 This plugin adds support for GNOME (via DBus) multimedia keys to DeaDBeeF player.
 
